# tinyrenderer

./: CMakeLists.txt  README.md  main.cpp
include/: api.h  camera.h  macros.h  math.h  model.h  shader.h  tgaimage.h  win32.h
src/: camera.cpp  line.cpp  math.cpp  model.cpp  shader.cpp  tgaimage.cpp  win32.cpp
